# case_based_ope

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  sepsis_config.yml  sepsis_sim_config.yml
src/case_based_ope/: __init__.py
src/case_based_ope/models/: posthoc_clustering.py  prototypes.py  training.py
src/case_based_ope/policy_evaluation/: importance_sampling.py
src/case_based_ope/sepsis/: build_ai_clinician.m  create_dataset.m  data.py  evaluate_models.py  perform_policy_evaluation.py  recreate_paper_results.py  target_policies.py  train_models.py
src/case_based_ope/sepsis/ai_clinician/: AIClinician_core_160219.m  AIClinician_mimic3_dataset_160219.m  AIClinician_sepsis3_def_160219.m  OffpolicyQlearning150816.m  offpolicy_eval_tdlearning.m
src/case_based_ope/sepsis_sim/: recreate_paper_results.py  run_experiment.py  utils.py
src/case_based_ope/sepsis_sim/gumbel_max_scm/: learn_mdp_parameters.ipynb
src/case_based_ope/sepsis_sim/gumbel_max_scm/cf/: counterfactual.py  utils.py
src/case_based_ope/sepsis_sim/gumbel_max_scm/sepsisSimDiabetes/: DataGenerator.py  MDP.py  State.py
src/case_based_ope/utils/: data.py  evaluation.py  metrics.py  misc.py  postprocessing.py
