[tool.poetry]
name = "case_based_ope"
version = "0.1.0"
description = "Code for the UAI 2022 paper 'Case-based off-policy evaluation using prototype learning'."
authors = ["Anton Matsson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.11.0"
conda-lock = "^1.0.5"
pandas = "^1.4.2"
addict = "^2.4.0"
amhelpers = "^0.2.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pymdptoolbox = "^4.0-b3"
numba = {version = "^0.55.2", python = ">=3.9,<3.11"}
dask-cuda = "^22.6.0"
skorch = "0.10.0"
ipykernel = "^6.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
